--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+        <link rel="icon" type="image/svg+xml" href="/iconoseissigma.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>SSIT Group</title>
         <meta name="description" content="SSIT Group" />
